# qa_guru_homework16

./: pyproject.toml
